--- a/src/app/components/showcase/showcase.component.html
+++ b/src/app/components/showcase/showcase.component.html
@@ -21,20 +21,85 @@
   <!-- 
     Philosophie a poursuivre:
     - Les hf-input sont juste un élément de style, avec label (pas error message -> le mettre dans les validator)
+    - Les Hf-input s'occupent de parser la valeur 
     - Les Validator sont tous set dans le showcase et ils s'occupent de générer le message d'erreur
     - Voir pour que les messages d'erreur soient defini qqpart. On les donne aux enfants ?
    -->
 
+
   <!-- <input [formControl]="formGroup.controls.text" />
   <input [formControl]="formGroup.controls.number" /> -->
 
-  <hf-text-field3 label="text field 3bl" [formControl]="formGroup.controls.text"></hf-text-field3>
-  <hf-text-field3 label="text field 3bl" [formControl]="formGroup.controls.number"></hf-text-field3>
+  <!-- <hf-text-field3 label="text field 3" [formControl]="formGroup.controls.text"></hf-text-field3>  -->
+  <!-- <hf-number-field3 label="number field 3" formControlName="number"></hf-number-field3> -->
+  <hf-geo-coordinate label="number field 3" formControlName="geo"></hf-geo-coordinate>
 
   <!-- <hf-number-field3 label="number field 3" formControlName="number"></hf-number-field3> -->
 </div>
+
+<!-- <hf-number-field3 label="text field 3"  [hideErrorMessage]="true" [formControl]="textFc"></hf-number-field3> -->
+
+<!-- {{number}}
+<hf-text-field3 label="text field 3bl" [(ngModel)]="number"></hf-text-field3>
+<hf-text-field3 label="text field 3bl"></hf-text-field3> -->
 
 <!-- <hf-number-field2 [fc]="numFc"></hf-number-field2> -->
 <!-- <hf-text-field [uuid]="'t'" [(ngModel)]="text" [mandatory]="true"></hf-text-field>
 <br/>
 <hf-text-field [uuid]="'r'" [formControl]="textFc" [mandatory]="true"></hf-text-field> -->
+
+
+   <!-- 
+    Champs: number, text, geocoord
+    value {
+      num: 4,
+      txt: null,
+      geo: {
+        lat: 43.0
+        lon: null
+      }
+    }
+    errors: {
+      txt: true,
+      geo: true
+    }
+    -->
+
+<!-- 
+  value: {
+    number: null,
+    text: 1
+  }
+  Actual errors display
+  errors: { 
+    "number": { 
+      "required": true 
+    }, 
+    "text": { 
+      "min": { "min": 3, "actual": "1" },
+      "minlength": { 
+        "requiredLength": 2, 
+        "actualLength": 1 
+      } 
+    } 
+  }
+
+  Si on fait un ErrorMessageService {
+    getErrorMessage(errors: ValidationErrors) {
+      if (!errors) return;
+
+      if (errors.required) {
+        return 'Mandatory';
+      } else if (errors.min) {
+        return 'Minimum value exceeded';
+      } else if (errors.max) {
+        return 'Maximum value exceeded';
+      } else {
+        console.warn(`Error ${JSON.stringify(errors)} not recognized by naval front`);
+        return 'Invalid';
+      }
+    }
+  }
+  
+  et dans les composants 
+-->
