--- a/src/app/components/text-field3/text-field3.component.html
+++ b/src/app/components/text-field3/text-field3.component.html
@@ -1,10 +1,11 @@
-<label class="hf-base-input-label">errors: {{ text.errors | json }}</label>
-<label class="hf-base-input-label">touched: {{ text.touched }}</label>
-<label class="hf-base-input-label">value: {{ text.value }}</label>
-
 <label class="hf-base-input-label" *ngIf="label">{{label}}</label>
 
-<input type="text" class="hf-base-input" [formControl]="text" [class.invalid]="text.invalid" (blur)="blur()" />
+<input type="text"
+       class="hf-base-input"
+       [class.invalid]="control && control.invalid"
+       [disabled]="disabled"
+       [ngModel]="internalValue"
+       (ngModelChange)="inputChange($event)"
+       (blur)="blur()" />
 
-<label class="hf-base-input-error">{{ text.errors || undefined | json}}</label>
-
+<label class="hf-base-input-error" *ngIf="!hideErrorMessage">{{ getErrorMessage() }}</label>
