--- a/src/app/components/text-field3/text-field3.component.html
+++ b/src/app/components/text-field3/text-field3.component.html
@@ -1,8 +1,10 @@
-<label class="hf-base-input-label" *ngIf="label">{{label}}</label>
+<label class="hf-base-input-label" *ngIf="label">{{ getLabel(label) }}</label>
 
 <input type="text"
        class="hf-base-input"
-       [class.invalid]="control && control.invalid"
+       [class.invalid]="control.invalid"
+       [class.touched]="control.touched"
+       [readOnly]="readonly"
        [disabled]="disabled"
        [ngModel]="internalValue"
        (ngModelChange)="inputChange($event)"
