--- a/src/app/components/number-field3/number-field3.component.html
+++ b/src/app/components/number-field3/number-field3.component.html
@@ -1,4 +1,4 @@
-<label class="hf-base-input-label" *ngIf="label">{{ getLabel(label) }}</label>
+<label class="hf-base-input-label" *ngIf="label">{{ getRequiredLabel(label) }}</label>
 
 <input type="text"
        class="hf-base-input"
